--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Jenny Wales Design</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link href='http://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
   </head>
   
   <body>
