--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
   
   <body>
     <div class="info">
-      Working on it...
+      <h1> Working on it...</h1>
+      <h3> In the meantime, <a href="https://twitter.com/jenny_wales", target="blank">here</a> are some things I find interesting.</h3>
+    </div>
+
+    <div class="footer">
+      WIP by Jenny in San Francisco
     </div>
 
   </body>
