--- a/index.html
+++ b/index.html
@@ -2,30 +2,24 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Jenny Wales Design</title>
+    <title>Jenny Brooks Design</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
-
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-29019046-2', 'auto');
-      ga('send', 'pageview');
-  </script>
   </head>
 
   <body>
+    <div class="background">
     <div class="info">
-      <h1> Working on it...</h1>
-      <h3> In the meantime, <a href="https://twitter.com/jenny_wales", target="blank">here</a> are some things I find interesting.</h3>
-    </div>
-
-    <div class="footer">
-      WIP by Jenny in San Francisco
+      <h1>Hi there. I'm Jenny Brooks.</h1>
+      <div>I love creating powerful, flexible, and delightful user and team experiences.</div>
+      </br>
+      <div><b>Now:</b> you can find me leading the learning experience design team at <a href="https://teacher.desmos.com/">Amplify</a>.</div>
+      </br>
+      <div><b>Previously:</b> I spent 10 years leading design at <a href="https://www.desmos.com/art">Desmos</a>, which joined Amplify in 2022.
+      </div>
+      </br>
+      <div>Big fan of accessibility, snacks, little big details, and mountain sports.</div>
     </div>
 
   </body>
