--- a/index.html
+++ b/index.html
@@ -5,23 +5,37 @@
     <title>Jenny Brooks Design</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link href='http://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
   </head>
 
   <body>
     <div class="background">
     <div class="info">
       <h1>Hi there. I'm Jenny Brooks.</h1>
-      <div>I love creating powerful, flexible, and delightful user and team experiences.</div>
+      <div class="description">I love creating powerful, flexible, and delightful user and team experiences.</div>
       </br>
-      <div><b>Now:</b> you can find me leading the learning experience design team at <a href="https://teacher.desmos.com/">Amplify</a>.</div>
-      </br>
-      <div><b>Previously:</b> I spent 10 years leading design at <a href="https://www.desmos.com/art">Desmos</a>, which joined Amplify in 2022.
+      <div>
+        <b>Now: you can find me leading the Learning Experience design team at <a href="https://teacher.desmos.com/">Amplify</a>.</b>
+        <div class="description">
+          We build a platform that supports
+          students in seeing their ideas come to life as they learn and collaborate with their peers,
+          teachers in becoming more confident and supported in their craft,
+          and curriculum teams in creating best-in-class classroom experiences.
+        </div>
       </div>
       </br>
-      <div>Big fan of accessibility, snacks, little big details, and mountain sports.</div>
+      <div>
+        <b>Previously: I spent 10 years leading design at <a href="https://www.desmos.com/art">Desmos</a>, which joined Amplify in 2022.</b>
+        <div class="description">
+          We started as a small team working on a free online graphing calculator. Working closely with math teachers, we built a few custom digital lessons as we explored ways to use technology to create powerful learning experiences.
+          That led us to build a free tool to create classroom activities, Activity Builder, which we used to create a middle school math curriculum that centers student thinking. The curriculum <a href="https://www.edreports.org/reports/overview/desmos-math-6-8-2022-2022">received perfect scores from EdReports</a> and <a href="https://amplify.com/news/new-efficacy-study-finds-desmos-math-6-8-significantly-improves-student-learning-outcomes-in-middle-grades/">improved student learning outcomes</a>.
+        </div>
+        </div>
+      </br>
+      <div class="description">Big fan of accessibility, snacks, little big details, and mountain sports.
+        <br />
+      You can gmail me at <b>hijennybrooks</b>. ⛰️✨
     </div>
-
+  </div>
   </body>
 </html>
 
